fix btm gallery title clipping

--- a/styles/gallery-styles/btm-gallery.scss
+++ b/styles/gallery-styles/btm-gallery.scss
@@ -39,7 +39,7 @@
         font-size: 64px;
     }
     @include media(">=LGdesktop"){
-        margin-top: -96px;
+        margin-top: -76px;
         font-size: 96px;
     }
 }
